--- a/app/src/main/res/layout/activity_local_video.xml
+++ b/app/src/main/res/layout/activity_local_video.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <include
+        layout="@layout/titlebar"/>
+
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/listview"
@@ -7,3 +15,4 @@
     tools:context="com.guaju.vitamiodemo.LocalVideoActivity">
 
 </ListView>
+</LinearLayout>
