横竖屏切换控制显示样式

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.guaju.vitamiodemo.MainActivity">
+    <!--自定义的titlebar-->
       <include layout="@layout/titlebar"/>
     <Button
         android:layout_width="match_parent"
