--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -15,7 +15,7 @@
             android:id="@+id/videoview"
             android:layout_centerInParent="true"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="@dimen/videoview_height" />
         <RelativeLayout
             android:id="@+id/rl"
             android:layout_alignBottom="@+id/videoview"
