--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -6,6 +6,7 @@
     android:layout_height="56dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
+        android:id="@+id/tv_title"
         android:layout_marginLeft="5dp"
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
