--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="videoview_height">200dp</dimen>
+    <dimen name="half_videoview_height">100dp</dimen>
 </resources>
