--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="videoview_height">200dp</dimen>
     <dimen name="half_videoview_height">100dp</dimen>
+    <dimen name="full_light_height">100dp</dimen>
 </resources>
