1.优化了切换横屏时达到沉浸式一体栏的效果2.优化了lightbar的隐藏显示3.优化了横竖屏切换时的亮度控制

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="videoview_height">200dp</dimen>
     <dimen name="half_videoview_height">100dp</dimen>
     <dimen name="full_light_height">100dp</dimen>
+    <dimen name="mindistance">5dp</dimen>
 </resources>
