--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,10 @@
 <resources>
     <dimen name="videoview_height">200dp</dimen>
     <dimen name="half_videoview_height">100dp</dimen>
+    <dimen name="videoview_height_3">33dp</dimen>
+    <dimen name="videoview_height_4">25dp</dimen>
+    <dimen name="videoview_height_5">20dp</dimen>
+    <dimen name="videoview_height_6">17dp</dimen>
     <dimen name="full_light_height">100dp</dimen>
     <dimen name="mindistance">5dp</dimen>
 </resources>
